--- a/site/docs/tbdex/pfi/creating-quotes.mdx
+++ b/site/docs/tbdex/pfi/creating-quotes.mdx
@@ -4,11 +4,11 @@ hide_title: true
 sidebar_position: 7
 ---
 
-import pfiQuotesWriteJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/pfi/pfiQuotesWriteJs.snippet.js'
+import pfiVerifyOfferingRequirementsJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/pfi/pfiVerifyOfferingRequirementsJs.snippet.js'
 import pfiQuotesWriteKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/pfi/pfiQuotesWriteKt.snippet.kt'
 import pfiQuotesProcessJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/pfi/pfiQuotesProcessJs.snippet.js'
 import pfiQuotesProcessKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/pfi/pfiQuotesProcessKt.snippet.kt'
-import pfiQuotesSendJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/pfi/pfiQuotesSendJs.snippet.js'
+import pfiQuoteCreateJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/pfi/pfiQuoteCreateJs.snippet.js'
 import pfiQuotesSendKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/pfi/pfiQuotesSendKt.snippet.kt'
 import pfiQuotesSignJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/pfi/pfiQuotesSignJs.snippet.js'
 import pfiQuotesSignKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/pfi/pfiQuotesSignKt.snippet.kt'
@@ -35,7 +35,7 @@ Building on the example from the [Exchange API Provider section](/docs/tbdex/pfi
 
 <Shnip snippets={
   [
-    { snippetContent: pfiQuotesWriteJs, language: 'JavaScript'},
+    { snippetContent: pfiVerifyOfferingRequirementsJs, language: 'JavaScript'},
     { snippetContent: pfiQuotesWriteKt, language: 'Kotlin'}
   ]} />
 
@@ -58,7 +58,7 @@ With that in mind, you can then create your quote using the `Quote.create()` met
 
 <Shnip snippets={
   [
-    { snippetContent: pfiQuotesSendJs, language: 'JavaScript'},
+    { snippetContent: pfiQuoteCreateJs, language: 'JavaScript'},
     { snippetContent: pfiQuotesSendKt, language: 'Kotlin'}
   ]} />
 
