Update snippet names

--- a/site/docs/tbdex/pfi/creating-quotes.mdx
+++ b/site/docs/tbdex/pfi/creating-quotes.mdx
@@ -5,13 +5,13 @@ sidebar_position: 7
 ---
 
 import pfiQuotesWriteJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/pfi/pfiQuotesWriteJs.snippet.js'
-import pfiQuotesWriteKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/pfi/pfiQuotesWriteKt.snippet.kt'
+import pfiWriteRfqGetOfferingKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/pfi/pfiWriteRfqGetOfferingKt.snippet.kt'
 import pfiQuotesProcessJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/pfi/pfiQuotesProcessJs.snippet.js'
-import pfiQuotesProcessKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/pfi/pfiQuotesProcessKt.snippet.kt'
+import pfiRfqVerifyOfferingRequirementsKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/pfi/pfiRfqVerifyOfferingRequirementsKt.snippet.kt'
 import pfiQuotesSendJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/pfi/pfiQuotesSendJs.snippet.js'
-import pfiQuotesSendKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/pfi/pfiQuotesSendKt.snippet.kt'
+import pfiCreateQuoteKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/pfi/pfiCreateQuoteKt.snippet.kt'
 import pfiQuotesSignJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/pfi/pfiQuotesSignJs.snippet.js'
-import pfiQuotesSignKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/pfi/pfiQuotesSignKt.snippet.kt'
+import pfiSignQuoteKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/pfi/pfiSignQuoteKt.snippet.kt'
 
 <LanguageSwitcher languages="JavaScript, Kotlin"/>
 
@@ -36,7 +36,7 @@ Building on the example from the [Exchange API Provider section](/docs/tbdex/pfi
 <Shnip snippets={
   [
     { snippetContent: pfiQuotesWriteJs, language: 'JavaScript'},
-    { snippetContent: pfiQuotesWriteKt, language: 'Kotlin'}
+    { snippetContent: pfiWriteRfqGetOfferingKt, language: 'Kotlin'}
   ]} />
 
 ## Verifying the Required Claims
@@ -48,7 +48,7 @@ The `RFQ` class offers the [verifyOfferingRequirements](https://tbd54566975.gith
 <Shnip snippets={
   [
     { snippetContent: pfiQuotesProcessJs, language: 'JavaScript'},
-    { snippetContent: pfiQuotesProcessKt, language: 'Kotlin'}
+    { snippetContent: pfiRfqVerifyOfferingRequirementsKt, language: 'Kotlin'}
   ]} />
 
 ## Creating and Sending a Quote
@@ -59,7 +59,7 @@ With that in mind, you can then create your quote using the `Quote.create()` met
 <Shnip snippets={
   [
     { snippetContent: pfiQuotesSendJs, language: 'JavaScript'},
-    { snippetContent: pfiQuotesSendKt, language: 'Kotlin'}
+    { snippetContent: pfiCreateQuoteKt, language: 'Kotlin'}
   ]} />
 
 With the `Quote` created, you’ll then sign it for authorization purposes and write it to your own database:
@@ -67,7 +67,7 @@ With the `Quote` created, you’ll then sign it for authorization purposes and w
 <Shnip snippets={
   [
     { snippetContent: pfiQuotesSignJs, language: 'JavaScript'},
-    { snippetContent: pfiQuotesSignKt, language: 'Kotlin'}
+    { snippetContent: pfiSignQuoteKt, language: 'Kotlin'}
   ]} />
 
 :::note
