--- a/site/docs/tbdex/pfi/creating-quotes.mdx
+++ b/site/docs/tbdex/pfi/creating-quotes.mdx
@@ -4,13 +4,13 @@ hide_title: true
 sidebar_position: 7
 ---
 
-import pfiVerifyOfferingRequirementsJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/pfi/pfiVerifyOfferingRequirementsJs.snippet.js'
+import pfiWriteRfqGetOfferingJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/pfi/pfiWriteRfqGetOfferingJs.snippet.js'
 import pfiQuotesWriteKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/pfi/pfiQuotesWriteKt.snippet.kt'
-import pfiQuotesProcessJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/pfi/pfiQuotesProcessJs.snippet.js'
+import pfiRfqVerifyOfferingRequirementsJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/pfi/pfiRfqVerifyOfferingRequirementsJs.snippet.js'
 import pfiQuotesProcessKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/pfi/pfiQuotesProcessKt.snippet.kt'
-import pfiQuoteCreateJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/pfi/pfiQuoteCreateJs.snippet.js'
+import pfiCreateQuoteJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/pfi/pfiCreateQuoteJs.snippet.js'
 import pfiQuotesSendKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/pfi/pfiQuotesSendKt.snippet.kt'
-import pfiQuotesSignJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/pfi/pfiQuotesSignJs.snippet.js'
+import pfiSignQuoteJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/pfi/pfiSignQuoteJs.snippet.js'
 import pfiQuotesSignKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/pfi/pfiQuotesSignKt.snippet.kt'
 
 <LanguageSwitcher languages="JavaScript, Kotlin"/>
@@ -35,7 +35,7 @@ Building on the example from the [Exchange API Provider section](/docs/tbdex/pfi
 
 <Shnip snippets={
   [
-    { snippetContent: pfiVerifyOfferingRequirementsJs, language: 'JavaScript'},
+    { snippetContent: pfiWriteRfqGetOfferingJs, language: 'JavaScript'},
     { snippetContent: pfiQuotesWriteKt, language: 'Kotlin'}
   ]} />
 
@@ -47,7 +47,7 @@ The `RFQ` class offers the [verifyOfferingRequirements](https://tbd54566975.gith
 
 <Shnip snippets={
   [
-    { snippetContent: pfiQuotesProcessJs, language: 'JavaScript'},
+    { snippetContent: pfiRfqVerifyOfferingRequirementsJs, language: 'JavaScript'},
     { snippetContent: pfiQuotesProcessKt, language: 'Kotlin'}
   ]} />
 
@@ -58,7 +58,7 @@ With that in mind, you can then create your quote using the `Quote.create()` met
 
 <Shnip snippets={
   [
-    { snippetContent: pfiQuoteCreateJs, language: 'JavaScript'},
+    { snippetContent: pfiCreateQuoteJs, language: 'JavaScript'},
     { snippetContent: pfiQuotesSendKt, language: 'Kotlin'}
   ]} />
 
@@ -66,7 +66,7 @@ With the `Quote` created, you’ll then sign it for authorization purposes and w
 
 <Shnip snippets={
   [
-    { snippetContent: pfiQuotesSignJs, language: 'JavaScript'},
+    { snippetContent: pfiSignQuoteJs, language: 'JavaScript'},
     { snippetContent: pfiQuotesSignKt, language: 'Kotlin'}
   ]} />
 
