fixing verifyRequiredClaims test

--- a/site/docs/tbdex/pfi/creating-quotes.mdx
+++ b/site/docs/tbdex/pfi/creating-quotes.mdx
@@ -4,7 +4,7 @@ hide_title: true
 sidebar_position: 7
 ---
 
-import pfiWriteRfqGetOfferingJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/pfi/pfiWriteRfqGetOfferingJs.snippet.js'
+import pfiCreateOfferingJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/pfi/pfiCreateOfferingJs.snippet.js'
 import pfiQuotesWriteKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/pfi/pfiQuotesWriteKt.snippet.kt'
 import pfiRfqVerifyOfferingRequirementsJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/pfi/pfiRfqVerifyOfferingRequirementsJs.snippet.js'
 import pfiQuotesProcessKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/pfi/pfiQuotesProcessKt.snippet.kt'
@@ -35,7 +35,7 @@ Building on the example from the [Exchange API Provider section](/docs/tbdex/pfi
 
 <Shnip snippets={
   [
-    { snippetContent: pfiWriteRfqGetOfferingJs, language: 'JavaScript'},
+    { snippetContent: pfiCreateOfferingJs, language: 'JavaScript'},
     { snippetContent: pfiQuotesWriteKt, language: 'Kotlin'}
   ]} />
 
