changing snippet name

--- a/site/docs/tbdex/pfi/creating-quotes.mdx
+++ b/site/docs/tbdex/pfi/creating-quotes.mdx
@@ -5,7 +5,7 @@ sidebar_position: 7
 ---
 
 import pfiQuotesWriteJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/pfi/pfiQuotesWriteJs.snippet.js'
-import pfiWriteRfqGetOfferingKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/pfi/pfiWriteRfqGetOfferingKt.snippet.kt'
+import pfiCreateOfferingKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/pfi/pfiCreateOfferingKt.snippet.kt'
 import pfiQuotesProcessJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/pfi/pfiQuotesProcessJs.snippet.js'
 import pfiRfqVerifyOfferingRequirementsKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/pfi/pfiRfqVerifyOfferingRequirementsKt.snippet.kt'
 import pfiQuotesSendJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/pfi/pfiQuotesSendJs.snippet.js'
@@ -36,7 +36,7 @@ Building on the example from the [Exchange API Provider section](/docs/tbdex/pfi
 <Shnip snippets={
   [
     { snippetContent: pfiQuotesWriteJs, language: 'JavaScript'},
-    { snippetContent: pfiWriteRfqGetOfferingKt, language: 'Kotlin'}
+    { snippetContent: pfiCreateOfferingKt, language: 'Kotlin'}
   ]} />
 
 ## Verifying the Required Claims
