--- a/site/docs/tbdex/wallet/get-offerings.mdx
+++ b/site/docs/tbdex/wallet/get-offerings.mdx
@@ -4,12 +4,6 @@ hide_title: true
 sidebar_position: 5
 ---
 
-import walletGetOfferingsJS from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/wallet/walletGetOfferingsJS.snippet.js'
-import walletGetOfferingsKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/wallet/walletGetOfferingsKt.snippet.kt'
-import walletFindMatchingOfferingsJS from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/wallet/walletFindMatchingOfferingsJS.snippet.js'
-import walletFindMatchingOfferingsKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/wallet/walletFindMatchingOfferingsKt.snippet.kt'
-
-
 <LanguageSwitcher languages="JavaScript, Kotlin" />
 
 # Get Offerings
@@ -24,8 +18,8 @@ In other words, an Offering is a way of describing a financial product that a PF
 
 <Shnip
   snippets={[
-    { snippetContent: walletGetOfferingsJS, language: 'JavaScript' },
-    { snippetContent: walletGetOfferingsKt, language: 'Kotlin' },
+    { snippetName: 'walletGetOfferingsJS', language: 'JavaScript' },
+    { snippetName: 'walletGetOfferingsKt', language: 'Kotlin' },
   ]}
 />
 
@@ -42,8 +36,8 @@ Given you have a list of PFIs on your network, you can check their Offerings for
 
 <Shnip
   snippets={[
-    { snippetContent: walletFindMatchingOfferingsJS, language: 'JavaScript' },
-    { snippetContent: walletFindMatchingOfferingsKt, language: 'Kotlin' },
+    { snippetName: 'walletFindMatchingOfferingsJS', language: 'JavaScript' },
+    { snippetName: 'walletFindMatchingOfferingsKt', language: 'Kotlin' },
   ]}
 />
 
