--- a/site/docs/tbdex/wallet/managing-credentials.mdx
+++ b/site/docs/tbdex/wallet/managing-credentials.mdx
@@ -6,15 +6,6 @@ sidebar_position: 6
 
 <LanguageSwitcher languages="JavaScript, Kotlin" />
 
-import findMatchingOfferingsWithCredentialValidationKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/wallet/findMatchingOfferingsWithCredentialValidationKt.snippet.kt';
-import findMatchingOfferingsWithCredentialValidationJS from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/wallet/findMatchingOfferingsWithCredentialValidationJS.snippet.js';
-
-import retrievePresentationDefinitionFromOfferingsRequiredClaimsJS from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/wallet/retrievePresentationDefinitionFromOfferingsRequiredClaimsJS.snippet.js';
-import retrievePresentationDefinitionFromOfferingsRequiredClaimsKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/wallet/retrievePresentationDefinitionFromOfferingsRequiredClaimsKt.snippet.kt';
-
-import getSelectedCredentialsKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/wallet/getSelectedCredentialsKt.snippet.kt';
-import getSelectedCredentialsJS from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/wallet/getSelectedCredentialsJS.snippet.js';
-
 # Managing Credentials
 
 Within a tbDEX network, [Verifiable Credentials (VC)](/docs/web5/learn/verifiable-credentials) play a critical role in establishing trust and ensuring regulatory compliance during transactions.
@@ -40,13 +31,11 @@ You can obtain the `requiredClaims` from an Offering via:
 <Shnip
   snippets={[
     {
-      snippetContent:
-        retrievePresentationDefinitionFromOfferingsRequiredClaimsKt,
+      snippetName: 'retrievePresentationDefinitionFromOfferingsRequiredClaimsKt',
       language: 'Kotlin',
     },
     {
-      snippetContent:
-        retrievePresentationDefinitionFromOfferingsRequiredClaimsJS,
+      snippetName: 'retrievePresentationDefinitionFromOfferingsRequiredClaimsJS',
       language: 'JavaScript',
     },
   ]}
@@ -87,11 +76,11 @@ You can narrow these options down even further by filtering for the ones where t
 <Shnip
   snippets={[
     {
-      snippetContent: findMatchingOfferingsWithCredentialValidationKt,
+      snippetName: 'findMatchingOfferingsWithCredentialValidationKt',
       language: 'Kotlin',
     },
     {
-      snippetContent: findMatchingOfferingsWithCredentialValidationJS,
+      snippetName: 'findMatchingOfferingsWithCredentialValidationJS',
       language: 'JavaScript',
     },
   ]}
@@ -114,11 +103,11 @@ To do so, pass the customer's credentials and the `requiredClaims` section of th
 <Shnip
   snippets={[
     {
-      snippetContent: getSelectedCredentialsKt,
+      snippetName: 'getSelectedCredentialsKt',
       language: 'Kotlin',
     },
     {
-      snippetContent: getSelectedCredentialsJS,
+      snippetName: 'getSelectedCredentialsJS',
       language: 'JavaScript',
     },
   ]}
