--- a/site/docs/tbdex/wallet/required-sdks.mdx
+++ b/site/docs/tbdex/wallet/required-sdks.mdx
@@ -4,10 +4,8 @@ title: Required SDKs
 hide_title: true
 ---
 
-import walletSdkInstallJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/wallet/walletSdkInstallJs.snippet.bash'
 import walletSdkInstallGradle from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/wallet/walletSdkInstallGradle.snippet.gradle'
 import walletSdkInstallPom from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/wallet/walletSdkInstallPom.snippet.xml'
-import walletSdkImportJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/wallet/walletSdkImportJs.snippet.js'
 
 <LanguageSwitcher languages="JavaScript, Kotlin" />
 
@@ -26,7 +24,7 @@ To implement and operate as a Wallet on a tbDEX network, you’ll need to use th
 
 <Shnip snippets={
   [
-    { snippetContent: walletSdkInstallJs, language: 'JavaScript', codeLanguage: 'bash'},
+    { snippetName: 'walletSdkInstallJs', language: 'JavaScript', codeLanguage: 'bash'},
     {
       language: 'Kotlin',
       nestedSnippets:{
@@ -48,7 +46,7 @@ To implement and operate as a Wallet on a tbDEX network, you’ll need to use th
 To send and receive tbDEX messages, import the following classes:
 
 <Shnip snippets={[
-    { snippetContent: walletSdkImportJs, language: 'JavaScript'},
+    { snippetName: 'walletSdkImportJs', language: 'JavaScript'},
   ]}
   inlineSnippets={[
     {
